@@ -103,7 +103,7 @@ mantissa          = 6
 bundledeps_phase  = runtime
 toolkit           = eumm
 toolkit_hardness  = soft
-bumpversions      = 1
+bump_versions     = 1
 srcreadme         = mkdn
 carton_mode       = 1
 Author::KENTNL::TravisCI.skip_perls = 5.8
