@@ -8,6 +8,7 @@
 
  [Features]
  - add a `carton_mode` parameter that presently just sets up cpanfile and local/etc rules.
+ - 'bumpversions' moved to 'bump_versions', but legacy interface retained.
 
 2.025010 2015-11-15T02:28:17Z f61f784
  - Provision more files during minting instead of relying on generation on the first invocation of `dzil build`
